--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
 nav {
     position: relative;
     color: white;
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
     font-size: 20px;
 }
 #fundo_home{
     background-image: url(imagens/fundo_roboticaa.png);
     background-size: 100%;
     background-repeat: no-repeat;
-    height: 90vh;
+    height: 95vh;
     color: white;
 }
 .logo{
@@ -22,9 +22,6 @@ img{
     width: 100%;
 }
 
-.right{
-    float: right;
-}
 .nav-link {
     color: aliceblue;
 }
@@ -37,16 +34,18 @@ li {
     max-width: 100%;
     height: auto;
 }
-.ham{
-    margin-right: 0px;
-}
-
-.inicio:hover{
-    color: rgb(234, 0, 255);
-}
 
 #titulo{
     float: right;
-    margin-top: 18%;
-    margin-right: 2%;
+    margin-top: 15%;
+    margin-right: 7%;
+    
+}
+.img-fluid{
+    margin-left: 10%;
+    width: 90%;
+}
+.collapse{
+    margin-right: 5%;
+    margin-top: 2%;
 }
