--- a/style.css
+++ b/style.css
@@ -224,6 +224,20 @@ footer {
     color: #C245EE;
 
 }
+body::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: rgb(255, 255, 255);        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background-color:#013A63;    /* color of the scroll thumb */
+    border-radius: 10px;       /* roundness of the scroll thumb */
+    border: 3px solid #C245EE;  /* creates padding around scroll thumb */
+  }
+
 
 /*Amimação do Botão*/
 @keyframes anim-1 {
